--- a/src/app/modules/carburant/carburant-sortie/edit/edit.component.html
+++ b/src/app/modules/carburant/carburant-sortie/edit/edit.component.html
@@ -9,12 +9,13 @@
         <form class="custom-placeholder" [formGroup]="editForm">
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10 col-md-5 mb-3">
-                    <app-select-formgroup [small]="true" label="type de carburant" formControlName="type_carburant" [selected]="editForm.get('type_carburant').value" [dataSource]="allTypeCarburants$" [createModal]="carburantEditComponent"></app-select-formgroup>
-                    <div *ngIf="shouldShowRequiredError('type_carburant')" class="invalid-feedback">veillez choisir.</div>
+                    <app-select-formgroup [libelleColumn]="'displayLibelle'" [small]="true" label="bon carburant" formControlName="bon_carburant_id" [selected]="editForm.get('bon_carburant_id').value" [dataSource]="allBonCarburantMasques$" [createModal]="bonCarburantMasqueEditComponent"></app-select-formgroup>
+                    <div *ngIf="shouldShowRequiredError('bon_carburant_id')" class="invalid-feedback">veillez choisir.</div>               
                 </div>
                 <div class="col-10 col-md-5 mb-3">
-                    <app-select-formgroup [small]="true" label="type de coupure de carburant" formControlName="type_coupure" [selected]="editForm.get('type_coupure').value" [dataSource]="allTypeCoupures$" [createModal]="coupureEditComponent"></app-select-formgroup>
-                    <div *ngIf="shouldShowRequiredError('type_coupure')" class="invalid-feedback">veillez choisir.</div>
+                    <input type="number" min="1" class="form-control" required [formControlName]="'nombre_coupure'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'nombre_coupure'), 'is-valid': isValid('nombre_coupure')}" name="nombre_coupure" required>
+                    <span class="custom-span">Nombre de coupure</span>
+                    <div *ngIf="shouldShowRequiredError('nombre_coupure')" class="invalid-feedback">veillez saisir.</div>
                 </div>
             </div>
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
@@ -23,25 +24,15 @@
                     <span class="custom-span" i18n>date sortie</span>
                 </div>
                 <div class="col-10 col-md-5 mb-3">
-                    <select class="custom-select" mySelectFirstOption required name="autorise_par" [formControlName]="'autorise_par'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'autorise_par') , 'is-valid': isValid('autorise_par')}" required>
-                        <ng-container *ngFor="let item of (allUsers$ | async)">
-                            <option [ngValue]="item.id">{{item.nom}} {{item.prenom}}</option>
-                        </ng-container>
-                    </select>
-                    <span class="custom-span" style="left:20px">autorisé par</span>
+                    <div class="input-group">
+                        <select class="custom-select" mySelectFirstOption required name="autorise_par" [formControlName]="'autorise_par'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'autorise_par') , 'is-valid': isValid('autorise_par')}" required>
+                            <ng-container *ngFor="let item of (allUsers$ | async)">
+                                <option [ngValue]="item.id">{{item.nom}} {{item.prenom}}</option>
+                            </ng-container>
+                        </select>
+                        <span class="custom-span" style="left:20px">autorisé par</span>
+                    </div>
                     <div *ngIf="shouldShowRequiredError('autorise_par')" class="invalid-feedback">veillez choisir.</div>
-                </div>
-            </div>
-            <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
-                <div class="col-10 col-md-5 mb-3">
-                    <input type="number" min="1" class="form-control" required [formControlName]="'nombre_coupure'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'nombre_coupure'), 'is-valid': isValid('nombre_coupure')}" name="nombre_coupure" required>
-                    <span class="custom-span">Nombre de coupure</span>
-                    <div *ngIf="shouldShowRequiredError('nombre_coupure')" class="invalid-feedback">veillez saisir.</div>
-                </div>
-                <div class="col-10 col-md-5 mb-3">
-                    <input type="number" class="form-control" required [formControlName]="'quantite_litre'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'quantite_litre'), 'is-valid': isValid('quantite_litre')}" name="quantite_litre" required>
-                    <span class="custom-span">Quantite de litre affectée</span>
-                    <div *ngIf="shouldShowRequiredError('quantite_litre')" class="invalid-feedback">veillez saisir.</div>
                 </div>
             </div>
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
