--- a/src/app/modules/logistique/logistique-shared/materiel-form/materiel-form.component.html
+++ b/src/app/modules/logistique/logistique-shared/materiel-form/materiel-form.component.html
@@ -16,9 +16,9 @@
           </div>
           <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
               <div class="col-10">
-                <input type="text" class="form-control" required [formControlName]="'libelle'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'libelle'), 'is-valid': isValid('libelle')}" name="libelle" required>
+                <input type="number" class="form-control" required [formControlName]="'quantite'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'quantite'), 'is-valid': isValid('quantite')}" name="quantite" required>
                 <span class="custom-span">Quantité</span>
-                <div class="invalid-feedback" *ngIf="shouldShowRequiredError('couleur')">veillez remplir ce champ.</div>
+                <div class="invalid-feedback" *ngIf="shouldShowRequiredError('quantite')">veillez remplir ce champ.</div>
               </div>
           </div>
       </form>
