--- a/src/app/modules/carburant/carburant-entree/edit/edit.component.html
+++ b/src/app/modules/carburant/carburant-entree/edit/edit.component.html
@@ -7,14 +7,10 @@
 <ng-container *ngIf="editForm">
     <div class="modal-body" [ngClass]="{'loading': isLoading}">
         <form class="custom-placeholder" [formGroup]="editForm">
-            <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
-                <div class="col-10 col-md-5 mb-3">
-                    <app-select-formgroup [small]="true" label="type de carburant" formControlName="type_carburant" [selected]="editForm.get('type_carburant').value" [dataSource]="allTypeCarburants$" [createModal]="carburantEditComponent"></app-select-formgroup>
-                    <div *ngIf="shouldShowRequiredError('type_carburant')" class="invalid-feedback">veillez choisir.</div>
-                </div>
-                <div class="col-10 col-md-5 mb-3">
-                    <app-select-formgroup [small]="true" label="type de coupure de carburant" formControlName="type_coupure" [selected]="editForm.get('type_coupure').value" [dataSource]="allTypeCoupures$" [createModal]="coupureEditComponent"></app-select-formgroup>
-                    <div *ngIf="shouldShowRequiredError('type_coupure')" class="invalid-feedback">veillez choisir.</div>
+            <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3" *ngIf="!isUpdating">
+                <div class="col-10 mb-3">
+                    <app-select-formgroup [libelleColumn]="'displayLibelle'" [small]="true" label="bon carburant" formControlName="bon_carburant_id" [selected]="editForm.get('bon_carburant_id').value" [dataSource]="allBonCarburantMasques$" [createModal]="bonCarburantMasqueEditComponent"></app-select-formgroup>
+                    <div *ngIf="shouldShowRequiredError('bon_carburant_id')" class="invalid-feedback">veillez choisir.</div>
                 </div>
             </div>
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
@@ -26,16 +22,6 @@
                     <input type="number" class="form-control" min="1" required [formControlName]="'nombre_coupure'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'nombre_coupure'), 'is-valid': isValid('nombre_coupure')}" name="nombre_coupure" required>
                     <span class="custom-span">Nombre de coupure</span>
                     <div *ngIf="shouldShowRequiredError('nombre_coupure')" class="invalid-feedback">veillez saisir.</div>
-                </div>
-            </div>
-            <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
-                <div class="col-10 col-md-5 mb-3">
-                    <app-select-formgroup [small]="true" label="fournisseur" formControlName="coordonnee_id" [selected]="editForm.get('coordonnee_id').value" [dataSource]="allCoordonnees$" [createModal]="coordonneeEditComponent"></app-select-formgroup>
-                    <div *ngIf="shouldShowRequiredError('coordonnee_id')" class="invalid-feedback">veillez choisir.</div>
-                </div>
-                <div class="col-10 col-md-5 mb-3">
-                    <app-select-formgroup [small]="true" label="Approvisionnement" formControlName="approvisionnement_id" [selected]="editForm.get('approvisionnement_id').value" [dataSource]="allApprovisionnements$" [createModal]="approvisionnementEditComponent"></app-select-formgroup>
-                    <div *ngIf="shouldShowRequiredError('approvisionnement_id')" class="invalid-feedback">veillez choisir.</div>
                 </div>
             </div>
         </form>
